-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b31
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8014143 | 8 | Coleen Phillimore | P3 | Closed | Fixed | b89 |
The InstanceKlass::release_C_heap_structures() is called when classes are unloaded by walking the system dictionary. In JDK7, anonymous classes are simply cleaned up by the garbage collector and are not in the system dictionary so any C heap structures associated with them are never reclaimed.
In jdk8, we can clean out these structures when we unload the ClassLoaderData object that holds their memory. We should move the InstanceKlass::release_C_heap_structures() function to the CLD unloading.
- backported by
-
JDK-8014143 release_C_heap_structures is never called for anonymous classes.
-
- Closed
-
- relates to
-
JDK-8013945 CMS fatal error: must own lock MemberNameTable_lock
-
- Resolved
-