8011803: release_C_heap_structures is never called for anonymous classes

Call this function from the ClassLoaderData destructor instead of the system dictionary walk.

Reviewed-by: stefank, mgerdin